--- a/package.json
+++ b/package.json
@@ -5,36 +5,37 @@
   "main": "dist/index.js",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --respawn src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "seed": "ts-node src/seed.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "tsx src/seed.ts"
   },
   "keywords": ["ats", "crm", "api", "node", "express", "typescript", "mongodb"],
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "zod": "^3.22.4",
-    "helmet": "^7.1.0",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcryptjs": "^2.4.6",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.4"
+    "@types/node": "^20.10.4",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "tsx": "^4.15.7",
+    "typescript": "^5.3.3"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "engines": { "node": ">=18.0.0" }
 }
